--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- Stylesheets -->
+		<link rel="stylesheet" type="text/css" href="css/app.css" />
+		<!-- Scripts -->
+		<script src="js/app.js"></script>
 		<title>Pictionary word reader for kids</title>
 	</head>
-	<body></body>
+	<body>
+		<div class="timer">5:00</div>
+		<div class="card-container">
+			<div class="card-container-text">apple</div>
+			<div class="card-container-buttons">
+				<div class="activity"><img src="assets/images/body.png" alt="body" /></div>
+				<a href="#">
+					<div class="play-button btn"><p>Play</p></div>
+				</a>
+				<a href="#">
+					<div class="next-button btn">Next</div>
+				</a>
+			</div>
+		</div>
+	</body>
 </html>
