--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<!-- Stylesheets -->
 		<link rel="stylesheet" type="text/css" href="css/app.css" />
 		<!-- Scripts -->
-		<script src="js/app.js"></script>
+		<script src="js/timer.js" defer></script>
 		<title>Pictionary word reader for kids</title>
 	</head>
 	<body>
-		<div class="timer">5:00</div>
+		<div class="timer"><p id="timerValue"></p></div>
 		<div class="card-container">
 			<div class="card-container-text">apple</div>
 			<div class="card-container-buttons">
