Added connected play/pause button. Added disappearing play button at the end of the countdown. Added time is up text at the end of the countdown. Fixed the issue when paused the countdown timer was still counting down for one extra second.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="card-container-buttons">
 				<div class="activity"><img src="assets/images/body.png" alt="body" /></div>
 				<a href="#">
-					<div class="play-button btn"><p>Play</p></div>
+					<div class="btn pause"><p class="play-button">Play</p></div>
 				</a>
 				<a href="#">
 					<div class="next-button btn">Next</div>
