Separated JS files for better readability.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="css/app.css" />
 		<!-- Scripts -->
 		<script src="js/cards.js" defer></script>
+		<script src="js/cardPicker.js" defer></script>
 		<script src="js/timer.js" defer></script>
 		<title>Pictionary word reader for kids</title>
 	</head>
