add class to btn and change id on click call

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div class="btn pause"><p class="play-button">Play</p></div>
 				</a>
 				<a href="#">
-					<div class="btn">
+					<div id='audioBtn' class="btn">
 						<audio id="audio" src="#" preload="metadata"></audio>
 						<p>Listen</p>
 					</div>
