separated js code into different files and fixed issue #2

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<!-- Scripts -->
 		<script src="js/cards.js" defer></script>
 		<script src="js/cardPicker.js" defer></script>
+		<script src="js/playBtn.js" defer></script>
 		<script src="js/timer.js" defer></script>
 		<title>Pictionary word reader for kids</title>
 	</head>
@@ -21,8 +22,8 @@
 					<div class="btn pause"><p class="play-button">Play</p></div>
 				</a>
 				<a href="#">
-					<div id='audioBtn' class="btn">
-						<audio id="audio" src="#" preload="metadata"></audio>
+					<div id="audioBtn" class="btn">
+						<audio id="audio" src="#" preload="auto"></audio>
 						<p>Listen</p>
 					</div>
 				</a>
