Made activity randomizer on page load. closed issue #4 Added page reload functionality on next button. closed issue #8

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<script src="js/cardPicker.js" defer></script>
 		<script src="js/playBtn.js" defer></script>
 		<script src="js/timer.js" defer></script>
+		<script src="js/load.js" defer></script>
 		<title>Pictionary word reader for kids</title>
 	</head>
 	<body>
@@ -17,7 +18,7 @@
 		<div class="card-container">
 			<div class="card-container-text">apple</div>
 			<div class="card-container-buttons">
-				<div class="activity"><img src="assets/images/body.png" alt="body" /></div>
+				<div class="activity"><img class="img" src="" /></div>
 				<a href="#">
 					<div class="btn pause"><p class="play-button">Play</p></div>
 				</a>
@@ -27,7 +28,7 @@
 						<p>Listen</p>
 					</div>
 				</a>
-				<a href="#">
+				<a href=""javascript:history.go(0)"">
 					<div class="btn"><p class="next-button">Next</p></div>
 				</a>
 			</div>
