--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 	</head>
 
 	<body>
+		<a href="#" class="modal-container btn">
+			<i class="fa fa-cog"></i>
+		</a>
 		<div class="timer">
 			<p id="timerValue"></p>
 		</div>
