Added modal container show up when user click on the settings button

--- a/index.html
+++ b/index.html
@@ -13,14 +13,23 @@
 		<!-- Scripts -->
 		<script src="js/cards.js" defer></script>
 		<script src="js/timer.js" defer></script>
+		<script src="js/modal.js" defer></script>
+
 
 		<title>Pictionary word reader for kids</title>
 	</head>
 
 	<body>
-		<a href="#" class="modal-container btn">
+		<a href="#" class="modal-button btn">
 			<i class="fa fa-cog"></i>
 		</a>
+		<div class="modal-container">
+			<div class="modal-box">
+				<div class="modal-header">
+					<h1 class="modal-box-header">Settings</h1>
+				</div>
+			</div>
+		</div>
 		<div class="timer">
 			<p id="timerValue"></p>
 		</div>
