Reorganized slider so it's better aligned with the settings elements
Reorganized slider, added SET button styling, deleted ugly button focus state.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						</div>
 					</div>
 
-						<button type="submit" onclick="gameInit(userInput().time.minutes, userInput().time.seconds)"></button>
+						<button type="submit" onclick="gameInit(userInput().time.minutes, userInput().time.seconds)">Set</button>
 
 			</div>
 			</form>
