Auto stash before checking out "HEAD"

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						</div>
 					</div>
 
-						<button type="submit" onclick="gameInit(userInput().time.minutes, userInput().time.seconds)">Set</button>
+						<button class="btn text-decoration" onclick="gameInit(userInput().time.minutes, userInput().time.seconds)">Set</button>
 
 			</div>
 			</form>
