Added function hide text when check button is unchecked
Added bigger array of cards back, changed HTML submit button with div, because it was causing issues that I couldn't resolve and added styling to the button. close issue #29

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						</div>
 					</div>
 
-						<button class="btn text-decoration" onclick="gameInit(userInput().time.minutes, userInput().time.seconds)">Set</button>
+						<div class="button" onclick="gameInit(userInput().time.minutes, userInput().time.seconds)">Set</div>
 
 			</div>
 			</form>
