--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 	<title>Activity para niños</title>
 </head>
 
-<!--fix The big mess to clean up -->
+<!-- fix The big mess to clean up -->
 <body>
 	<a href="#" class="modal-button btn"><i class="fa fa-cog"></i></a>
 	<div class="modal-container" id="modal">
 		<div class="modal-box">
 			<div class="modal-header">
-				<h1 class="modal-box-header">Ajustes</h1>
+				<h1 class="modal-box-header"></h1>
 			</div>
 			<div class="modal-box-body">
 				<form class="modal-box-form">
