Completed language changing feature for the cardData and minor bug fixes
Changed cursor to pointer on form elements. And made the language changing feature work with the data file

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						</div>
 					</div>
 
-						<div class="button" id="apply-button" onclick="gameInit(userInput().time.minutes, userInput().time.seconds)">Aplicar</div>
+						<div class="button" id="apply-button" onclick="cardDataLanguage()">Aplicar</div>
 
 			</div>
 			</form>
