Minimal UI Improvement
decorated the players area so it doesn-t look a squished together. Limited player number to 8.

--- a/index.html
+++ b/index.html
@@ -91,10 +91,13 @@
 
 		</div>
 	</div>
-	</div>
+
+
+	<div class="display">
 
 	<div class="players-container">
 		<h2 id="players-title">Players</h2>
+		<p id="score-title">Score</p>
 		<ul id="players"></ul>
 		<form id="players-form">
 			<input type="text" id="player-name-input" placeholder="Enter your name">
@@ -102,10 +105,11 @@
 		</form>
 	</div>
 
-	<div class="timer">
+
+	<div class="card-container">
+			<div class="timer">
 		<p id="timerValue"></p>
 	</div>
-	<div class="card-container">
 		<div class="card-container-text"></div>
 		<div class="card-container-buttons">
 			<div class="activity"><img class="img" src="" /></div>
@@ -125,6 +129,9 @@
 			</a>
 		</div>
 	</div>
+			</div>
+
+	
 </body>
 
 </html>
