Translated newly added strings
Minimal UI improvement, translated strings, adjusted player counter to 0 based

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		<ul id="players"></ul>
 		<form id="players-form">
 			<input type="text" id="player-name-input" placeholder="Enter your name">
-			<div class="button" type="submit" id="create-player-button">Create</div>
+			<div class="button" id="create-player-button">Create</div>
 		</form>
 	</div>
 
