Fixed sound issue on registering players
Fixed issue when multiple eventListeners were added to the listen button on adding players. close #30

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!-- fix The big mess to clean up -->
 <body>
 	<a href="#" class="modal-button btn"><i class="fa fa-cog"></i></a>
-	<div class="modal-container modal" id="modal">
+	<div class="modal-container" id="modal">
 		<div class="modal-box">
 			<div class="modal-header">
 				<h1 class="modal-box-header"></h1>
